UMPA Version History
====================
Version 0.1.1:
  * create testsuite (26 tests)
  * #308 - new API for schedule.send()
  * bug fixing: #306, #307

Version 0.1:
  * first release (2009/02/14)